--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,13 +10,10 @@ services:
     image: mariadb:latest
     container_name: mariadb
     environment:
-      - PUID=1024 # The user ID of the current user
-      - PGID=100 # The group ID of the current user
-      - TZ=Europe/London # The Timezone where you live
-      - MYSQL_ROOT_PASSWORD=CHANGE_THIS_PASSWORD # Change this password
+      - MYSQL_ROOT_PASSWORD=CHANGE_THIS_PASSWORD # ⚠️ Change this password
       - MYSQL_DATABASE=nextcloud_db
       - MYSQL_USER=nextcloud
-      - MYSQL_PASSWORD=CHANGE_THIS_PASSWORD2 # Change this password
+      - MYSQL_PASSWORD=CHANGE_THIS_PASSWORD2 # ⚠️ Change this password
     restart: unless-stopped
     ports:
       - 3306:3306
@@ -48,10 +45,10 @@ services:
     image: weejewel/wg-easy
     container_name: wg-easy
     environment:
-      - WG_HOST=YOUR_PUBLIC_IP # Change this to your public IP
+      - WG_HOST=YOUR_PUBLIC_IP # ⚠️ Change this to your public IP
       - WG_PORT=51820
       - WG_DEFAULT_DNS=10.2.0.100,10.2.0.100 # The DNS 10.2.0.100 to connect with Pi-Hole
-      - PASSWORD=CHANGE_THIS_PASSWORD # Change this password to access the web UI
+      - PASSWORD=CHANGE_THIS_PASSWORD3 # ⚠️ Change this password to access the web UI
     restart: unless-stopped
     ports:
       - "51820:51820/udp" # This port 51820 is for the actual VPN, port forward this to access it outside your network
@@ -77,18 +74,15 @@ services:
       - 127.0.0.1  
     environment:
       - TZ=Europe/London
-      - WEBPASSWORD= # Blank password - Can be whatever you want.
+      - WEBPASSWORD=CHANGE_THIS_PASSWORD4 # ⚠️ Change this - Can be left blank but not recommended.
       - ServerIP=10.2.0.100 # Internal IP of pihole
-    volumes: # Volumes store your data between container upgrades
+    volumes:
       - "./etc-pihole/:/etc/pihole/"
       - "./etc-dnsmasq.d/:/etc/dnsmasq.d/"
     ports:
-      - "5353:53/tcp" # This should be for the DNS stuff
-      - "8081:80/tcp" # This is for accessing your Pi-Hole admin server (10.2.0.100/admin)
-    # Recommended but not required (DHCP needs NET_ADMIN)
-    # https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
-    cap_add:
-      - NET_ADMIN
+      - "53:53/tcp"
+      - "53:53/udp"
+      - "5353:80/tcp" # This is for accessing your Pi-Hole admin server (10.2.0.100/admin)
     networks:
       private_network:
         ipv4_address: 10.2.0.100
